tests/baselines/reference/invalidConstraint1.errors.txt
==== tests/cases/compiler/invalidConstraint1.ts (2 errors) ====
    function f<T, U extends { a: T }>() {
                  ~~~~~~~~~~~~~~~~~~
!!! error TS2229: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
        return undefined;
    }
    f<string, { a: number }>(); // should error
    ~
!!! error TS2086: Type '{ a: number; }' does not satisfy the constraint '{ a: string; }' for type parameter 'U extends { a: T; }'.
    
    